# p5mandelbrot

./: .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  README.ja.md  README.md  biome.json  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: eval-interesting-points.md
.dev/docs/: ui-redesign-plan.md
.github/workflows/: deploy-gh-pages.yml
public/: _headers
public/preset-poi/: parameters.json
public/wasm/: apfp_bg.wasm
rust_client/: Cargo.toml  README.md
rust_client/src/: main.rs
scripts/: convert-poi-list.ts
src/: aggregator.ts  bignumber-worker.ts  buffer.test.ts  buffer.ts  camera.ts  canvas-reference.ts  color.ts  constants.ts  doublejs-worker.ts  doublejs.d.ts  gmp-worker.ts  main.ts  main.tsx  mandelbrot-doublejs-worker.ts  mandelbrot-simple-perturbation-worker.ts  mandelbrot-worker.ts  mandelbrot.ts  math.ts  rect.test.ts  rect.ts  rendering.ts  style.css  types.ts  vite-env.d.ts  worker.ts  workers.ts
src/aggregator/: aggregator.test.ts  aggregator.ts
src/batch-render-history/: batch-render-history.ts  use-batch-render-history.ts
src/benchmark/: bench-pois.ts  benchmark-runner.ts  benchmark-stats.ts
src/camera/: camera.ts  palette.ts
src/color/: color-chromajs.ts  color-d3-chromatic.ts  color-others.ts  color-p5js.ts  color.test.ts  color.ts  deserializer.ts  index.test.ts  index.ts  model.ts
wasm/: .gitignore  Cargo.toml  README.md
wasm-fp/: Cargo.toml
(+202 files in other folders)
