[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.26"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.2"

